[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "processor-manager-lib"
version = "0.1.0"
description = "Processor manager utility library"
authors = [{name = "DHCW"}]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3>=2.6.3",
    "setuptools>=82.0.0",
    "opentelemetry-api>=1.29.0",
]

[dependency-groups]
dev = [
  "otel-lib",
]

[tool.uv.sources]
otel-lib = { path = "../otel_lib" }

[tool.setuptools.packages.find]
where = ["."]
include = ["processor_manager_lib*"]

