[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-base-lib"
version = "0.1.0"
description = "Shared base library for HL7 transformer applications"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "azure-servicebus==7.14.2",
    "azure-identity==1.23.0",
    "hl7apy==1.3.5",
    "message-bus-lib",
    "health-check-lib",
    "processor-manager-lib",
    "event-logger-lib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transformer_base_lib*"]


