[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-base-lib"
version = "0.1.0"
description = "Shared base library for HL7 transformer applications"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "azure-core>=1.38.0",
    "azure-servicebus==7.14.2",
    "azure-identity==1.25.2",
    "hl7apy==1.3.5",
    "urllib3>=2.6.3",
    "message-bus-lib",
    "health-check-lib",
    "processor-manager-lib",
    "event-logger-lib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transformer_base_lib*"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.8",
    "bandit>=1.9.1",
]

[tool.uv.sources]
message-bus-lib = { path = "../message_bus_lib" }
health-check-lib = { path = "../health_check_lib" }
processor-manager-lib = { path = "../processor_manager_lib" }
event-logger-lib = { path = "../event_logger_lib" }


